Fixes some layout issues with homepage

--- a/server/files/stylesheets/semantic.css
+++ b/server/files/stylesheets/semantic.css
@@ -204,7 +204,7 @@ a:hover {
   position: relative;
   z-index: 2;
   margin: 0em;
-  min-height: 210px;
+  min-height: 180px;
   padding-top: 70px;
   padding-bottom: 30px;
   background-color: #FFFFFF;
